<?xml version="1.0" encoding="utf-8"?><resources>

    <string name="app_name">远程控制</string>
    <string name="menu_settings">系统设置</string>
    <string name="menu_logut">退出登录</string>
    <string name="menu_logutApp">结束程序</string>
    <string name="menu_task_manager">任务管理</string>
    <string name="menu_file_manager">文件管理</string>
    <string name="menu_run_terminal">运行终端</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="forced_login">强制登陆</string>
    <string name="login">登陆</string>
    <string name="logining">登陆中....</string>
    <string name="user_login">用户登陆</string>
    <string name="save_info">保存信息</string>
    <string name="loading">加载中....</string>
    <string name="server_name">服务器地址</string>
    <string name="server_port">服务器端口</string>
    <string name="file_server_name">文件传输地址</string>
    <string name="file_server_port">文件传输端口</string>
    <string name="save">保存</string>
    <string name="test">测试</string>
    <string name="test_success">测试成功</string>
    <string name="config_saved">配置已保存</string>
    <string name="exception_error_notice">异常错误提示</string>
    <string name="config_read_error">配置读取错误</string>
    <string name="default_server_port">默认2001</string>
    <string name="default_file_server_port">默认2002</string>
    <string name="default_server_name">IP或域名</string>
    <string name="default_file_server_name">IP或域名</string>
    <string name="server_port_error">服务器端口有误</string>
    <string name="file_server_port_error">文件传输服务端口有误</string>
    <string name="server_name_error">服务器名有误</string>
    <string name="file_server_name_error">文件传输服务名口有误</string>
    <string name="user_and_password_can_not_be_empty">用户名和密码不能为空</string>
    <string name="network_disconnect">网络未连接</string>
    <string name="config_save_error">配置文件保存失败</string>
    <string name="net_server_start_exception">网络服务启动异常</string>
    <string name="login_timeout">登录超时</string>
    <string name="run_command">执行命令</string>
    <string name="title_activity_main">控制页</string>
    <string name="function">功能</string>
    <string name="screen_shots">截图</string>
    <string name="send_message">发送消息</string>
    <string name="send_warning">发送警告</string>
    <string name="message">消息</string>
    <string name="error_message">错误消息</string>
    <string name="send">发送</string>
    <string name="clear">清除</string>
    <string name="top">顶部</string>
    <string name="bottom">底部</string>
    <string name="use_the_menu_to_exit">使用菜单退出</string>
    <string name="get">获取</string>
    <string name="screen_shots_thum_width">截图缩略图宽度</string>
    <string name="refresh">刷新</string>
    <string name="download">下载</string>
    <string name="full_download">完整</string>
    <string name="download_manager">下载管理</string>
    <string name="downloading">下载中</string>
    <string name="downloaded">已下载</string>
    <string name="sdcard_path">RemoteControl</string>
    <string name="sdcard_path_download">download</string>
    <string name="sdcard_path_log">log</string>
    <string name="empty">empty</string>
    <string name="delete">删除</string>
    <string name="rename">重命名</string>
    <string name="copy">复制</string>
    <string name="select_all">全选</string>
    <string name="run_cmd">运行命令</string>
    <string name="mkdir">创建文件夹</string>
    <string name="mkfile">创建空文件</string>
    <string name="go_root_path">回到根目录</string>
    <string name="file_eng">FILE</string>
    <string name="file">文件</string>
    <string name="dir_eng">DIR</string>
    <string name="dir">文件夹</string>
    <string name="last_dir">上级目录</string>
    <string name="go_back_main_page">返回主界面</string>
    <string name="input_dir_name">输入文件夹名：</string>
    <string name="input_file_name">输入文件名：</string>
    <string name="input_rename">输入新路径：</string>
    <string name="input_copy">输入复制的目标路径：</string>
    <string name="input_delete">确定删除这些文件：</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="open_file">打开文件</string>
    <string name="pid">PID:</string>
    <string name="p_name">名称:</string>
    <string name="p_memoery">内存:</string>
    <string name="p_path">路径:</string>
    <string name="input_kill_task">确定结束此任务？</string>
    <string name="terminal_char">终端字符或命令</string>
    <string name="clear_screen">清屏</string>
    <string name="terminal_type_line">命令行模式</string>
    <string name="terminal_type_char">字符模式</string>
    <string name="help">帮助</string>

</resources>