<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_task_manager"
        android:title="@string/menu_task_manager">
    </item>
    <item
        android:id="@+id/menu_file_manager"
        android:title="@string/menu_file_manager">
    </item>
    <item
        android:id="@+id/menu_terminal"
        android:title="@string/menu_run_terminal">
    </item>
    <item
        android:id="@+id/menu_download"
        android:title="@string/download_manager">
    </item>
    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_logut">
    </item>
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_help"
        android:title="@string/help"/>
    <item
        android:id="@+id/menu_exit"
        android:title="@string/menu_logutApp">
    </item>

</menu>