<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityLogin" >

    <TextView
        android:id="@+id/pager_message_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/user_login"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText_UserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pager_message_textView"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_UserName"
        android:layout_below="@+id/editText_UserName"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/checkBox_ForcedLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_Password"
        android:layout_below="@+id/editText_Password"
        android:text="@string/forced_login" />

    <CheckBox
        android:id="@+id/checkBox_SaveInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_Login"
        android:layout_toRightOf="@+id/checkBox_ForcedLogin"
        android:checked="true"
        android:text="@string/save_info" />

    <Button
        android:id="@+id/button_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editText_Password"
        android:layout_below="@+id/checkBox_ForcedLogin"
        android:layout_toLeftOf="@+id/editText_Password"
        android:onClick="Login"
        android:text="@string/login" />

</RelativeLayout>