<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/pager_message_button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/clear" />

    <Button
        android:id="@+id/pager_message_button_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/bottom" />

    <Button
        android:id="@+id/pager_message_button_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/pager_message_button_bottom"
        android:text="@string/top" />

    <ScrollView
        android:id="@+id/pager_message_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pager_message_button_clear"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@xml/bg_border_message" >

        <TextView
            android:id="@+id/pager_message_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginBottom="112dp"
            android:padding="3dp" />
    </ScrollView>

    <Button
        android:id="@+id/pager_message_button_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/pager_message_button_clear"
        android:text="@string/refresh" />

</RelativeLayout>