<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:paddingLeft="3dp"
    android:paddingRight="3dp"
    android:paddingTop="2dp" >

    <TextView
        android:id="@+id/task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/empty"
        android:textColor="#aa1144" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/terminal_text"
        android:text="@string/p_memoery"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/task_memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:text="@string/empty" />

    <TextView
        android:id="@+id/task_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/task_memory"
        android:layout_alignParentRight="true"
        android:text="@string/empty"
        android:textColor="#0033ff" />

    <TextView
        android:id="@+id/terminal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/task_id"
        android:text="@string/pid"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_toLeftOf="@+id/task_memory"
        android:text="@string/p_name"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/task_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/task_memory"
        android:layout_alignBottom="@+id/task_memory"
        android:layout_alignParentRight="true"
        android:text="@string/empty"
        android:textColor="#777711" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:text="@string/p_path"
        android:textColor="#999999" />

    <TextView
        android:id="@+id/task_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/task_memory"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/task_memory"
        android:text="@string/empty"
        android:textColor="#66aa77" />

</RelativeLayout>
