<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/FullName"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/FullSize"
        android:singleLine="true"
        android:text="@string/empty" />

    <Button
        android:id="@+id/SimpleDown"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/FullDown"
        android:text="@string/download" />

    <Button
        android:id="@+id/FullDown"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/full_download" />

    <TextView
        android:id="@+id/SimpleName"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/FullName"
        android:layout_toLeftOf="@+id/SimpleSize"
        android:singleLine="true"
        android:text="@string/empty" />

    <TextView
        android:id="@+id/FullSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/SimpleDown"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#9988EE" />

    <TextView
        android:id="@+id/SimpleSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/FullName"
        android:layout_toLeftOf="@+id/SimpleDown"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#9988EE" />

</RelativeLayout>